samples/_failures_safe/1761479146_dce170_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7ca16127.c: In function ‘main’:
./samples/SAFE/__tmp_7ca16127.c:154:5: error: expected declaration or statement at end of input
  154 |     print_compression_info(ctx);
      |     ^~~~~~~~~~~~~~~~~~~~~~
